feat: Refactor article drafts routing and enhance editor layout with action buttons

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -170,7 +170,7 @@
       </button>
       <mat-divider></mat-divider>
       }
-      <button mat-menu-item routerLink="/drafts">
+      <button mat-menu-item routerLink="/article/drafts">
         <mat-icon>edit_document</mat-icon>
         <span>Drafts</span>
       </button>
