--- a/src/app/pages/article/editor/editor.component.html
+++ b/src/app/pages/article/editor/editor.component.html
@@ -1,30 +1,6 @@
-<mat-toolbar class="editor-toolbar">
-  <span>{{ isEditMode() ? 'Edit Article' : 'New Article' }}</span>
-  <span class="spacer"></span>
-
-  @if (isPublishing()) {
-  <mat-progress-bar mode="indeterminate" class="publish-progress"></mat-progress-bar>
-  }
-
-  <button mat-icon-button (click)="navigateToDrafts()" matTooltip="View all drafts">
-    <mat-icon>edit_document</mat-icon>
-  </button>
-
-  <button mat-button (click)="cancel()" [disabled]="isPublishing()">
-    <mat-icon>close</mat-icon>
-    <span class="button-label">Cancel</span>
-  </button>
-
-  <button mat-button (click)="saveDraft()" [disabled]="!isDraftValid() || isPublishing()">
-    <mat-icon>save</mat-icon>
-    <span class="button-label">Save Draft</span>
-  </button>
-
-  <button mat-flat-button (click)="publish()" [disabled]="!isValid() || isPublishing()">
-    <mat-icon>publish</mat-icon>
-    <span class="button-label">Publish</span>
-  </button>
-</mat-toolbar>
+<div class="editor-header">
+  <h2>{{ isEditMode() ? 'Edit Article' : 'New Article' }}</h2>
+</div>
 
 @if (isLoading()) {
 <div class="loading-container">
@@ -156,5 +132,31 @@
       </div>
     </div>
   </mat-expansion-panel>
+
+  <!-- Action Buttons -->
+  <div class="action-buttons">
+    @if (isPublishing()) {
+    <mat-progress-bar mode="indeterminate" class="publish-progress"></mat-progress-bar>
+    }
+
+    <button mat-icon-button (click)="navigateToDrafts()" matTooltip="View all drafts">
+      <mat-icon>edit_document</mat-icon>
+    </button>
+
+    <button mat-button (click)="cancel()" [disabled]="isPublishing()">
+      <mat-icon>close</mat-icon>
+      <span class="button-label">Cancel</span>
+    </button>
+
+    <button mat-button (click)="saveDraft()" [disabled]="!isDraftValid() || isPublishing()">
+      <mat-icon>save</mat-icon>
+      <span class="button-label">Save Draft</span>
+    </button>
+
+    <button mat-flat-button color="primary" (click)="publish()" [disabled]="!isValid() || isPublishing()">
+      <mat-icon>publish</mat-icon>
+      <span class="button-label">Publish</span>
+    </button>
+  </div>
 </div>
 }
