feat: Simplify cancel button in editor by removing icon and label for improved clarity

--- a/src/app/pages/article/editor/editor.component.html
+++ b/src/app/pages/article/editor/editor.component.html
@@ -144,8 +144,7 @@
     </button>
 
     <button mat-button (click)="cancel()" [disabled]="isPublishing()">
-      <mat-icon>close</mat-icon>
-      <span class="button-label">Cancel</span>
+      Cancel
     </button>
 
     <button mat-button (click)="saveDraft()" [disabled]="!isDraftValid() || isPublishing()">
