--- a/src/app/components/event-types/photo-event.component.html
+++ b/src/app/components/event-types/photo-event.component.html
@@ -1,47 +1,35 @@
 @if (hasContentWarning()) {
-  <div class="content-warning">
-    <mat-icon>warning</mat-icon>
-    <span>{{ contentWarning() }}</span>
-  </div>
+<div class="content-warning">
+  <mat-icon>warning</mat-icon>
+  <span>{{ contentWarning() }}</span>
+</div>
 }
 
 @if (title()) {
-  <h3 class="media-title">{{ title() }}</h3>
+<h3 class="media-title">{{ title() }}</h3>
 }
 
 <div class="photo-gallery">
   @for (imageUrl of imageUrls(); track $index) {
-    @let blurhashDataUrl = blurhashDataUrls()[$index];
-    @let imageAltText = altTexts()[$index];
-    <div class="photo-container">
-      @if (blurhashDataUrl) {
-        <img
-          [src]="blurhashDataUrl"
-          class="photo-item blurhash-placeholder"
-          [alt]="imageAltText"
-          [title]="imageAltText"
-          aria-hidden="true"
-        />
-      }
-      <img
-        [src]="imageUrl"
-        [alt]="imageAltText"
-        [title]="imageAltText"
-        class="photo-item main-image"
-        loading="lazy"
-        (load)="onImageLoad($event)"
-        (click)="openImageDialog(imageUrl, imageAltText)"
-        tabindex="0"
-        role="button"
-        (keyup.enter)="openImageDialog(imageUrl, imageAltText)"
-        (keyup.space)="openImageDialog(imageUrl, imageAltText)"
-      />
-    </div>
+  @let blurhashDataUrl = blurhashDataUrls()[$index];
+  @let imageAltText = altTexts()[$index];
+  <div class="photo-container">
+    @if (blurhashDataUrl) {
+    <img [src]="blurhashDataUrl" class="photo-item blurhash-placeholder" [alt]="imageAltText" [title]="imageAltText"
+      aria-hidden="true" />
+    }
+    <img [src]="imageUrl" [alt]="imageAltText" [title]="imageAltText" class="photo-item main-image" loading="lazy"
+      (load)="onImageLoad($event)" (click)="openImageDialog(imageUrl, imageAltText)" tabindex="0" role="button"
+      (keyup.enter)="openImageDialog(imageUrl, imageAltText)" (keyup.space)="openImageDialog(imageUrl, imageAltText)" />
+  </div>
   }
 </div>
 
 @if (description()) {
-  <p class="photo-description">
-    {{ description() }}
-  </p>
+<p class="photo-description">
+  {{ description() }}
+</p>
 }
+
+<!-- NIP-22 Comments Section -->
+<app-comments-list [event]="event()"></app-comments-list>
