feat: Refactor comment editor to handle publish action via Enter key with Ctrl/Cmd modifier

--- a/src/app/components/comment-editor-dialog/comment-editor-dialog.component.html
+++ b/src/app/components/comment-editor-dialog/comment-editor-dialog.component.html
@@ -7,7 +7,7 @@
         <mat-label>Your comment</mat-label>
         <textarea #contentTextarea matInput [(ngModel)]="content"
           placeholder="Write your comment... (plaintext only, no formatting)" rows="6" [disabled]="isPublishing()"
-          (keydown.ctrl.enter)="onPublish()" (keydown.meta.enter)="onPublish()"></textarea>
+          (keydown)="onKeydown($event)"></textarea>
         <mat-hint>Press Ctrl+Enter (Cmd+Enter on Mac) to publish</mat-hint>
       </mat-form-field>
 
