--- a/src/app/components/user-profile/user-profile.component.html
+++ b/src/app/components/user-profile/user-profile.component.html
@@ -68,16 +68,17 @@
     view() !== 'tiny' &&
     view() !== 'name'
     ) {
-    <div class="user-profile-content" #contentElement (mouseenter)="onMouseEnter($event, contentElement)"
-      (mouseleave)="onMouseLeave()">
+    <div class="user-profile-content">
       <!-- Name section -->
-      <a [routerLink]="['/p', npubValue()]" class="user-profile-name-link">
+      <a [routerLink]="['/p', npubValue()]" class="user-profile-name-link" #nameElement
+        (mouseenter)="onMouseEnter($event, nameElement)" (mouseleave)="onMouseLeave()">
         <app-profile-display-name [pubkey]="pubkey()"></app-profile-display-name>
       </a>
 
       <!-- NPUB section - only shown in appropriate views -->
       @if (view() === 'list' || view() === 'details') {
-      <a [routerLink]="['/p', npubValue()]" class="user-profile-npub-link">
+      <a [routerLink]="['/p', npubValue()]" class="user-profile-npub-link" #npubElement
+        (mouseenter)="onMouseEnter($event, npubElement)" (mouseleave)="onMouseLeave()">
         <div class="user-profile-npub">{{ aliasOrNpub() }}</div>
       </a>
       }
