feat: Add hideComments functionality to event components and update styles for media grid

--- a/src/app/components/event-types/video-event.component.html
+++ b/src/app/components/event-types/video-event.component.html
@@ -61,5 +61,7 @@
 </p>
 }
 
+@if (!hideComments()) {
 <!-- NIP-22 Comments Section -->
 <app-comments-list [event]="event()"></app-comments-list>
+}
