--- a/src/app/components/event-types/photo-event.component.html
+++ b/src/app/components/event-types/photo-event.component.html
@@ -57,5 +57,7 @@
 </p>
 }
 
+@if (!hideComments()) {
 <!-- NIP-22 Comments Section -->
 <app-comments-list [event]="event()"></app-comments-list>
+}
