feat: Add overlay functionality to photo and video events with navigation options

--- a/src/app/components/event-types/photo-event.component.html
+++ b/src/app/components/event-types/photo-event.component.html
@@ -9,7 +9,23 @@
 <h3 class="media-title">{{ title() }}</h3>
 }
 
-<div class="photo-carousel-container" (touchstart)="onTouchStart($event)" (touchend)="onTouchEnd($event)">
+<div class="photo-carousel-container" (touchstart)="onTouchStart($event)" (touchend)="onTouchEnd($event)"
+  [class.has-overlay]="showOverlay()">
+  @if (showOverlay()) {
+  <div class="event-overlay">
+    <div class="overlay-actions">
+      <button mat-raised-button class="overlay-button" (click)="openImageDialog(currentImageUrl(), currentAltText())"
+        title="View media in fullscreen">
+        <mat-icon>fullscreen</mat-icon>
+        <span>View Media</span>
+      </button>
+      <button mat-raised-button class="overlay-button" (click)="openEventPage()" title="Open full event">
+        <mat-icon>open_in_new</mat-icon>
+        <span>Open Event</span>
+      </button>
+    </div>
+  </div>
+  }
   <div class="photo-carousel">
     <div class="photo-container">
       @if (currentBlurhashDataUrl()) {
