--- a/src/app/pages/profile/profile-media/profile-media.component.html
+++ b/src/app/pages/profile/profile-media/profile-media.component.html
@@ -10,7 +10,8 @@
       @for (mediaItem of media(); track mediaItem.event.id) {
       <mat-grid-tile>
         <div class="media-item">
-          <app-event [event]="mediaItem.event" appearance="plain" [navigationDisabled]="false" [hideComments]="true">
+          <app-event [event]="mediaItem.event" appearance="plain" [navigationDisabled]="false" [hideComments]="true"
+            [showOverlay]="true">
           </app-event>
         </div>
       </mat-grid-tile>
