--- a/src/app/pages/badges/badges.component.scss
+++ b/src/app/pages/badges/badges.component.scss
@@ -28,6 +28,26 @@
   margin-top: 24px;
 }
 
+.badge-drag-container {
+  cursor: move;
+
+  &.cdk-drag-preview {
+    opacity: 0.8;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+  }
+
+  &.cdk-drag-animating {
+    transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+  }
+}
+
+.badge-drag-placeholder {
+  background: rgba(128, 128, 128, 0.1);
+  border: 2px dashed rgba(128, 128, 128, 0.3);
+  min-height: 200px;
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
+
 .badges-list {
   display: flex;
   flex-direction: column;
